--- a/pages/admin_function/view_travel.html
+++ b/pages/admin_function/view_travel.html
@@ -151,7 +151,7 @@
                         <a class="nav-link" href="/pages/admin_home.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Logout</a>
+                        <a class="nav-link" href="/index.html">Logout</a>
                     </li>
                 </ul>
             </div>
