--- a/pages/user_function/user_view_food.html
+++ b/pages/user_function/user_view_food.html
@@ -128,7 +128,7 @@
                         <a class="nav-link" href="/pages/user_home.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Logout</a>
+                        <a class="nav-link" href="/index.html">Logout</a>
                     </li>
                 </ul>
             </div>
