--- a/pages/user_function/user_view_hotel_info.html
+++ b/pages/user_function/user_view_hotel_info.html
@@ -123,7 +123,7 @@
                         <a class="nav-link" href="/pages/home.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Logout</a>
+                        <a class="nav-link" href="/index.html">Logout</a>
                     </li>
                 </ul>
             </div>
