--- a/pages/user_home.html
+++ b/pages/user_home.html
@@ -24,7 +24,7 @@
                         <a class="nav-link" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Logout</a>
+                        <a class="nav-link" href="/index.html">Logout</a>
                     </li>
                 </ul>
             </div>
